<resources>
    <string name="app_name" translatable="false">DPI Tunnel</string>
    <string name="app_ascii_logo_lock" translatable="false">\u00A0\u00A0\u00A0\u00A0____\n\u00A0\u00A0\u00A0//\"\"\\\\\n\u00A0\u00A0||\u00A0\u00A0\u00A0\u00A0||\n\u00A0\u00A0||____||\n\u00A0//******\\\\\n||***/\\***||\n||***\\/***||\n\u00A0\\\\******//\n\u00A0\u00A0\u00A0\"\"\"\"\"\"</string>
    <string name="app_ascii_logo_unlock" translatable="false">\u00A0\u00A0\u00A0\u00A0____\n\u00A0\u00A0\u00A0//\"\"\\\\\n\u00A0\u00A0||\u00A0\u00A0\u00A0\u00A0||\n\u00A0\u00A0\u00A0_____||\n\u00A0//******\\\\\n||***/\\***||\n||***\\/***||\n\u00A0\\\\******//\n\u00A0\u00A0\u00A0\"\"\"\"\"\"</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="port">Port:</string>
    <string name="other">Other</string>
    <string name="split_summary">Divide packets into parts</string>
    <string name="split_title">Split requests</string>
    <string name="split_position_title">Split position</string>
    <string name="split_position_summary">Click to set request split position</string>
    <string name="socks5_title">Use SOCKS5 proxy</string>
    <string name="socks5_summary">If this option is enabled, requests to the server go through a SOCKS5 proxy</string>
    <string name="http_header_title">Change HOST header</string>
    <string name="http_header_summary">If this option is enabled, the HOST header changes to the specified</string>
    <string name="http_header_spell_title">HOST header spell</string>
    <string name="http_dot_title">Add dot after host name</string>
    <string name="http_dot_summary">If this option is enabled, a dot is added after the server name</string>
    <string name="http_tab_summary">If this option is enabled, a tab is added after the server name</string>
    <string name="http_tab_title">Add tab after host name</string>
    <string name="http_space_host_title">Remove space after HOST header</string>
    <string name="http_space_host_summary">If this option is enabled, the space after the HOST header is removed</string>
    <string name="http_space_method_title">Add space after method</string>
    <string name="http_space_method_summary">If this option is enabled, a space after the method is added</string>
    <string name="http_newline_method_title">Add newline before method</string>
    <string name="http_newline_method_summary">If this option is enabled, a newline is added before the method</string>
    <string name="http_unix_newline_title">Use UNIX style newlines</string>
    <string name="http_unix_newline_summary">If this option is enabled, the end of the line in UNIX style is used</string>
    <string name="doh_title">Use DoH protocol</string>
    <string name="doh_summary">This option enables DoH protocol support for DNS queries</string>
    <string name="dns_doh_hostlist_title">Use DoH protocol only for sites in hostlist</string>
    <string name="dns_doh_hostlist_summary">If this option is enabled, the DoH protocol is used only for sites in the hostlist (requires enabling DoH protocol and hostlist support options)</string>
    <string name="dns_doh_server_title">DNS servers addresses</string>
    <string name="hostlist_enable_title">Use hostlist</string>
    <string name="hostlist_enable_summary">If this option is enabled, DPI bypass methods are applied only to sites from the list (the list is located in the program folder and is updated with a button on the main screen)</string>
    <string name="other_socks5_title">SOCKS5 proxy address</string>
    <string name="other_bind_port_title">DPITunnel port</string>
    <string name="other_bind_port_summary">Specifies the port on which the local HTTP proxy DPITunnel server is running</string>
    <string name="other_proxy_setting_title">Set global proxy with ROOT</string>
    <string name="other_proxy_setting_summary">Set DPITunnel proxy with ROOT (requires root)</string>
    <string name="update_hostlist">Update hostlist</string>
    <string name="update_hostlist_ok">Hostlist updated successfully</string>
    <string name="update_hostlist_bad">There was an error while updating hostlist</string>
    <string name="please_run_service">DPI Tunnel service isn\'t running. Please, run it</string>
    <string name="service_is_running">DPITunnel is running...</string>
    <string name="hostlist_path_title">Set path to hostlist file</string>
    <string name="hostlist_path_summary">This option set path to hostlist file</string>
    <string name="please_grant_permissions">Please grant required permissions. App can\'t work without them.</string>
    <string name="dns_doh_server_summary">You can enter several DoH servers by entering them from a new line</string>
    <string name="other_proxy_vpn_title">Set global proxy with VPN</string>
    <string name="other_proxy_vpn_summary">Set DPITunnel proxy with VpnService (requires android 5 and high)</string>
    <string name="http_proxy_title">Use HTTP proxy</string>
    <string name="http_proxy_summary">If this option is enabled, requests to the server go through a HTTP proxy</string>
    <string name="other_http_proxy_title">HTTP proxy address</string>
    <string name="other_start_on_boot_title">Start the service at boot system</string>
    <string name="other_start_on_boot_summary">Launch DPITunnel service on Android boot</string>
    <string name="hostlist" translatable="false">Hostlist</string>
    <string name="hostlist_source_title">Hostlist source</string>
    <string name="hostlist_source_summary">Indicates where to download the hostlist file</string>
    <string name="hostlist_format_title">Hostlist file format</string>
    <string name="hostlist_format_summary">Specifies the hostlist file format</string>
    <string name="service_running_warning">Service is running. Please stop it before open settings</string>
    <string name="sni_title">SNI replace</string>
    <string name="sni_summary">Replace SNI field in HTTPS ClientHello request</string>
    <string name="sni_spell_title">SNI spell</string>
    <string name="sni_spell_summary">SNI will be replaced by this line. You can use ${SNI} to insert the original SNI</string>
    <string name="author_is">The author of this program is</string>
    <string name="zhenyolka" translatable="false">zhenyolka</string>
    <string name="github_link">DPITunnel repository on <a href="https://github.com/zhenyolka/DPITunnel">GitHub</a></string>
    <string name="open_tutorial_again">open tutorial again</string>
    <string name="about_dpitunnel">DPI Tunnel is application that modifies your traffic in order to bypass DPI and give you free access to information.\nP.S. Please, don\'t skip this intro.</string>
    <string name="root_slide_text">DPI Tunnel can work without root rights using VpnService API, but using root rights, it\'s possible to improves stability and efficiency. If you have root rights, please grant them.</string>
    <string name="grant_root_rights">Grant root rights</string>
    <string name="grant_root_rights_fail">An error occurred while getting root rights</string>
    <string name="grant_root_rights_success">Root rights are successfully obtained</string>
    <string name="sni_slide_text">If you want to use the SNI spoofing option, you need to install <a href="https://github.com/zhenyolka/DPITunnel/blob/master/app/src/main/assets/rootCA.crt">this</a> SSL certificate for comfortable work. To do this, download it, open the device settings. Open Security-> Encryption &amp; Credentials-> Install from SD Card. Select the downloaded certificate and install it.\nDon\'t worry about data security as it is processed locally.</string>
    <string name="hostlists_sources_map" translatable="false">{\"RUS\" : [\"https://reestr.rublacklist.net/api/v2/domains/json\", \"json\"], \"IND\" : [\"https://raw.githubusercontent.com/kush789/How-India-Censors-The-Web-Data/master/potentially_blocked_unique_hostnames.txt\", \"txt\"]}</string>
</resources>
